gcc/testsuite/rust/rustc/ui/issues/issue-7970b.rs
fn main() {}

macro_rules! test {}
// { dg-error "" "" { target *-*-* } .-1 }

